<resources>
    <string name="app_name">boris_stojanovic_rn3518</string>
    <string name="add_event">Add Event</string>
    <string name="set_date">Set Date</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Event Description</string>
    <string name="check_time_for_location">Check Time For Location</string>
    <string name="location">Location</string>
    <string name="set_time">Set Time</string>
    <string name="enter_url">Enter Url</string>
    <string name="event_list">Event List</string>
    <string-array name="priority">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="cities">
        <item>Belgrade</item>
        <item>Amsterdam</item>
        <item>Budapest</item>
        <item>Vienna</item>
        <item>Rome</item>
        <item>Berlin</item>
        <item>Andorra</item>
        <item>Athens</item>
        <item>Astrakhan</item>
        <item>Brussels</item>
        <item>Bucharest</item>
        <item>Budapest</item>
        <item>Chisinau</item>
        <item>Copenhagen</item>
        <item>Dublin</item>
        <item>Gibraltar</item>
        <item>Helsinki</item>
        <item>Istanbul</item>
        <item>Kaliningrad</item>
        <item>Kiev</item>
        <item>Kirov</item>
        <item>Lisbon</item>
        <item>London</item>
        <item>Luxembourg</item>
        <item>Madrid</item>
        <item>Malta</item>
        <item>Minsk</item>
        <item>Monaco</item>
    </string-array>
</resources>