<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.widget.Button
        style="@style/ButtonStyle"
        android:id="@+id/addEventSaveButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:text="@string/add_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUrl" />

    <android.widget.Button
        android:id="@+id/datePickerButton"
        style="@style/ButtonStyle"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/set_date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLocation" />

    <ProgressBar
        android:id="@+id/loadingPb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <Spinner
        android:id="@+id/spinner"
        style="@style/TextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerButton" />

    <EditText
        android:id="@+id/edtTitle"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/event_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtDescription"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/event_description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTitle" />

    <android.widget.Button
        android:id="@+id/btnLocation"
        style="@style/ButtonStyle"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:text="@string/check_time_for_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtLocation" />

    <AutoCompleteTextView
        android:id="@+id/edtLocation"
        style="@style/TextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnLocation"
        app:layout_constraintTop_toBottomOf="@+id/edtDescription" />

    <android.widget.Button
        android:id="@+id/btnSetTime"
        style="@style/ButtonStyle"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:text="@string/set_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/datePickerButton"
        app:layout_constraintTop_toTopOf="@+id/datePickerButton" />

    <EditText
        android:id="@+id/edtUrl"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/enter_url"
        android:inputType="textUri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>